[workspace]
resolver = "2"
members = [
    "crates/carb-sys",
    "crates/isaac-sim-bridge",
]

[workspace.package]
version = "5.1.0-alpha.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/AstroRoboticsTech/isaac-sim-rs"
rust-version = "1.85"

[workspace.dependencies]
log = "0.4"
