[workspace]
resolver = "2"
members = [
    "crates/carb-sys",
    "crates/isaac-sim-arrow",
    "crates/isaac-sim-bridge",
    "crates/isaac-sim-dora",
    "crates/isaac-sim-rerun",
    "examples/lidar-receiver",
    "examples/rerun-viewer",
]

[workspace.package]
version = "5.1.0-alpha.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/AstroRoboticsTech/isaac-sim-rs"
rust-version = "1.85"

[workspace.dependencies]
log = "0.4"
arrow = "54"
rerun = "0.31"
bytemuck = "1"
serde_json = "1"
arc-swap = "1"
