# Crate versions follow semver from 0.1.0 onward. Compatible Isaac Sim
# versions are listed in [workspace.metadata].isaac-sim-target and per-crate READMEs.
[workspace]
resolver = "2"
members = [
    "crates/carb-sys",
    "crates/isaac-sim-arrow",
    "crates/isaac-sim-bridge",
    "crates/isaac-sim-dora",
    "crates/isaac-sim-rerun",
    "crates/isaac-sim-rs",
]

[workspace.metadata]
isaac-sim-target = "5.1"

[workspace.metadata.release]
shared-version = true

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
license-file = "LICENSE"
repository = "https://github.com/AstroRoboticsTech/isaac-sim-rs"
rust-version = "1.85"

[workspace.dependencies]
log = "0.4"
arrow = "54"
rerun = "0.31"
bytemuck = "1"
serde_json = "1"
arc-swap = "1"
parking_lot = "0.12"
