# carb-sys binds NVIDIA Carbonite headers that ship with Isaac Sim.
# Those headers are not redistributable; this crate is dev-only and
# stays publish = false. Workspace consumers depend on it via path.
[package]
name = "carb-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Raw FFI bindings to the NVIDIA Omniverse Carbonite (Carb) SDK shipped with Isaac Sim 5.1"
publish = false

[build-dependencies]
bindgen = "0.70"
