[package]
name = "isaac-sim-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cxx::bridge core that forwards Isaac Sim sensor and actuator buffers into Rust callbacks."
license-file = "../../LICENSE"
keywords = ["isaac-sim", "robotics", "omniverse", "simulation", "cxx"]
categories = ["science::robotics", "simulation"]
documentation = "https://docs.rs/isaac-sim-bridge"
homepage = "https://github.com/AstroRoboticsTech/isaac-sim-rs"
readme = "README.md"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
all-features = false
no-default-features = true
features = []
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
cdylib = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { workspace = true }
env_logger = "0.11"
cxx = "1"
arc-swap = { workspace = true }
parking_lot = { workspace = true }

[build-dependencies]
cxx-build = "1"

[dev-dependencies]
serde_json = { workspace = true }
bytemuck = { workspace = true }
