[package]
name = "isaac-sim-rerun"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rerun viewer adapter for Isaac Sim sensor pipelines."
license-file = "../../LICENSE"
keywords = ["isaac-sim", "robotics", "omniverse", "simulation", "rerun"]
categories = ["science::robotics", "simulation"]
documentation = "https://docs.rs/isaac-sim-rerun"
homepage = "https://github.com/AstroRoboticsTech/isaac-sim-rs"
readme = "README.md"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
isaac-sim-bridge = { path = "../isaac-sim-bridge", version = "0.1" }
rerun = { workspace = true }
arc-swap = { workspace = true }
bytemuck = { workspace = true }
eyre = "0.6"
log = { workspace = true }
