[package]
name = "example-nova-carter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Example: Nova Carter end-to-end demo. Bridge-loaded cdylib that opens a rerun viewer, subscribes every sensor publisher (2D + 3D LiDAR, RGB + depth camera + camera info, IMU, chassis odometry), and drives Carter with a synthetic cmd_vel publisher so the robot visibly arcs through the warehouse."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
isaac-sim-bridge = { path = "../../crates/isaac-sim-bridge" }
isaac-sim-rerun = { path = "../../crates/isaac-sim-rerun" }
rerun = { workspace = true }
eyre = "0.6"
log = { workspace = true }
env_logger = "0.11"
